Hack for a passing istio e2e tests
This is obviously just a hack to see if anything is missing from the
e2e test environment.

The following is now passing: `./devel/run-e2e.sh -ginkgo.focus="Istio"`

Signed-off-by: Szabolcs Berecz <szabolcs.berecz@banzaicloud.com>

--- a/test/e2e/framework/config/BUILD.bazel
+++ b/test/e2e/framework/config/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "ginkgo.go",
         "helm.go",
         "ingress_controller.go",
+        "istio.go",
         "samplewebhook.go",
         "suite.go",
         "tiller.go",
