--- a/cmd/ctl/pkg/create/certificaterequest/BUILD.bazel
+++ b/cmd/ctl/pkg/create/certificaterequest/BUILD.bazel
@@ -6,7 +6,10 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/create/certificaterequest",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/ctl/pkg/util:go_default_library",
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/ctl:go_default_library",
         "//pkg/util/pki:go_default_library",
