--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
-load("//build:go_binary.bzl", "go_binary")
+load("//build/bazel:go_binary.bzl", "go_binary")
 
 go_library(
     name = "go_default_library",
