--- a/cmd/acmesolver/BUILD.bazel
+++ b/cmd/acmesolver/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
-load("//build:version.bzl", "version_x_defs")
-load("//build:go_binary.bzl", "go_binary")
+load("//build/bazel:version.bzl", "version_x_defs")
+load("//build/bazel:go_binary.bzl", "go_binary")
 
 go_library(
     name = "go_default_library",
