--- a/deploy/manifests/BUILD.bazel
+++ b/deploy/manifests/BUILD.bazel
@@ -3,8 +3,8 @@ package(default_visibility = ["//visibility:public"])
 exports_files(["00-crds.yaml"])
 
 load("@io_k8s_repo_infra//defs:pkg.bzl", "pkg_tar")
-load("//build:helm.bzl", "helm_tmpl")
-load("//build:licensing.bzl", "licensed_file")
+load("//build/bazel:helm.bzl", "helm_tmpl")
+load("//build/bazel:licensing.bzl", "licensed_file")
 
 RELEASE_NAME = "cert-manager"
 
