--- a/.bazelrc
+++ b/.bazelrc
@@ -1,5 +1,1 @@
-# Include git version info
-build --workspace_status_command tools/build/print-workspace-status.sh
-
-# bazel including rules_docker 0.12.0 may not need the following flag
-build --host_force_python=PY2
+build/bazel/root/.bazelrc
