--- a/pkg/controller/certificates/trigger/BUILD.bazel
+++ b/pkg/controller/certificates/trigger/BUILD.bazel
@@ -2,32 +2,29 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "builder.go",
-        "context.go",
-        "controller.go",
-        "helper.go",
-        "register.go",
-        "util.go",
-    ],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller",
+    srcs = ["trigger_controller.go"],
+    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/trigger",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/acme/accounts:go_default_library",
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/client/informers/externalversions:go_default_library",
+        "//pkg/client/listers/certmanager/v1alpha2:go_default_library",
+        "//pkg/controller:go_default_library",
+        "//pkg/controller/certificates:go_default_library",
+        "//pkg/controller/certificates/internal/predicate:go_default_library",
+        "//pkg/controller/certificates/trigger/policies:go_default_library",
         "//pkg/logs:go_default_library",
-        "//pkg/metrics:go_default_library",
+        "//pkg/scheduler:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
-        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
+        "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_client_go//informers:go_default_library",
-        "@io_k8s_client_go//kubernetes:go_default_library",
-        "@io_k8s_client_go//rest:go_default_library",
+        "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
@@ -46,15 +43,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
-        "//pkg/controller/acmechallenges:all-srcs",
-        "//pkg/controller/acmeorders:all-srcs",
-        "//pkg/controller/cainjector:all-srcs",
-        "//pkg/controller/certificaterequests:all-srcs",
-        "//pkg/controller/certificates:all-srcs",
-        "//pkg/controller/clusterissuers:all-srcs",
-        "//pkg/controller/ingress-shim:all-srcs",
-        "//pkg/controller/issuers:all-srcs",
-        "//pkg/controller/test:all-srcs",
+        "//pkg/controller/certificates/trigger/policies:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
@@ -62,10 +51,17 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = ["helper_test.go"],
+    srcs = ["trigger_controller_test.go"],
     embed = [":go_default_library"],
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/controller:go_default_library",
+        "//pkg/controller/certificates/trigger/policies:go_default_library",
+        "//pkg/controller/test:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_client_go//testing:go_default_library",
+        "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
