--- a/pkg/util/predicate/BUILD.bazel
+++ b/pkg/util/predicate/BUILD.bazel
@@ -9,7 +9,7 @@ go_library(
         "predicate.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/util/predicate",
-    visibility = ["//pkg/controller/certificates:__subpackages__"],
+    visibility = ["//visibility:public"],
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
