--- a/cmd/ctl/pkg/create/certificaterequest/BUILD.bazel
+++ b/cmd/ctl/pkg/create/certificaterequest/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
+        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_cli_runtime//pkg/resource:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
