--- a/deploy/crds/crd-orders.yaml
+++ b/deploy/crds/crd-orders.yaml
@@ -155,9 +155,12 @@ spec:
                               that must also be presented.
                             type: string
                           type:
-                            description: Type is the type of challenge being offered,
-                              e.g. http-01, dns-01
+                            description: Type is the type of challenge being offered.
+                              One of "http-01" or "dns-01".
                             type: string
+                            enum:
+                            - http-01
+                            - dns-01
                           url:
                             description: URL is the URL of this challenge. It can
                               be used to retrieve additional metadata about the Challenge
@@ -339,9 +342,12 @@ spec:
                               that must also be presented.
                             type: string
                           type:
-                            description: Type is the type of challenge being offered,
-                              e.g. http-01, dns-01
+                            description: Type is the type of challenge being offered.
+                              One of "http-01" or "dns-01".
                             type: string
+                            enum:
+                            - http-01
+                            - dns-01
                           url:
                             description: URL is the URL of this challenge. It can
                               be used to retrieve additional metadata about the Challenge
@@ -524,9 +530,12 @@ spec:
                               that must also be presented.
                             type: string
                           type:
-                            description: Type is the type of challenge being offered,
-                              e.g. http-01, dns-01
+                            description: Type is the type of challenge being offered.
+                              One of "HTTP-01" or "DNS-01".
                             type: string
+                            enum:
+                            - HTTP-01
+                            - DNS-01
                           url:
                             description: URL is the URL of this challenge. It can
                               be used to retrieve additional metadata about the Challenge
