--- a/deploy/crds/crd-challenges.yaml
+++ b/deploy/crds/crd-challenges.yaml
@@ -277,8 +277,8 @@ spec:
                           hostedZoneName:
                             description: HostedZoneName is an optional field that
                               tells cert-manager in which Cloud DNS zone the challenge
-                              record has te be create. If left empty cert-manager
-                              will automatically chose this zone.
+                              record has to be created. If left empty cert-manager
+                              will automatically choose a zone.
                             type: string
                           project:
                             type: string
@@ -1747,8 +1747,8 @@ spec:
                           hostedZoneName:
                             description: HostedZoneName is an optional field that
                               tells cert-manager in which Cloud DNS zone the challenge
-                              record has te be create. If left empty cert-manager
-                              will automatically chose this zone.
+                              record has to be created. If left empty cert-manager
+                              will automatically choose a zone.
                             type: string
                           project:
                             type: string
@@ -3218,8 +3218,8 @@ spec:
                           hostedZoneName:
                             description: HostedZoneName is an optional field that
                               tells cert-manager in which Cloud DNS zone the challenge
-                              record has te be create. If left empty cert-manager
-                              will automatically chose this zone.
+                              record has to be created. If left empty cert-manager
+                              will automatically choose a zone.
                             type: string
                           project:
                             type: string
