--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -335,8 +335,8 @@ spec:
                                 hostedZoneName:
                                   description: HostedZoneName is an optional field
                                     that tells cert-manager in which Cloud DNS zone
-                                    the challenge record has te be create. If left
-                                    empty cert-manager will automatically chose this
+                                    the challenge record has to be created. If left
+                                    empty cert-manager will automatically choose a
                                     zone.
                                   type: string
                                 project:
@@ -2259,8 +2259,8 @@ spec:
                                 hostedZoneName:
                                   description: HostedZoneName is an optional field
                                     that tells cert-manager in which Cloud DNS zone
-                                    the challenge record has te be create. If left
-                                    empty cert-manager will automatically chose this
+                                    the challenge record has to be created. If left
+                                    empty cert-manager will automatically choose a
                                     zone.
                                   type: string
                                 project:
@@ -4185,8 +4185,8 @@ spec:
                                 hostedZoneName:
                                   description: HostedZoneName is an optional field
                                     that tells cert-manager in which Cloud DNS zone
-                                    the challenge record has te be create. If left
-                                    empty cert-manager will automatically chose this
+                                    the challenge record has to be created. If left
+                                    empty cert-manager will automatically choose a
                                     zone.
                                   type: string
                                 project:
