--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -334,8 +334,8 @@ spec:
                                 hostedZoneName:
                                   description: HostedZoneName is an optional field
                                     that tells cert-manager in which Cloud DNS zone
-                                    the challenge record has te be create. If left
-                                    empty cert-manager will automatically chose this
+                                    the challenge record has to be created. If left
+                                    empty cert-manager will automatically choose a
                                     zone.
                                   type: string
                                 project:
@@ -2257,8 +2257,8 @@ spec:
                                 hostedZoneName:
                                   description: HostedZoneName is an optional field
                                     that tells cert-manager in which Cloud DNS zone
-                                    the challenge record has te be create. If left
-                                    empty cert-manager will automatically chose this
+                                    the challenge record has to be created. If left
+                                    empty cert-manager will automatically choose a
                                     zone.
                                   type: string
                                 project:
@@ -4182,8 +4182,8 @@ spec:
                                 hostedZoneName:
                                   description: HostedZoneName is an optional field
                                     that tells cert-manager in which Cloud DNS zone
-                                    the challenge record has te be create. If left
-                                    empty cert-manager will automatically chose this
+                                    the challenge record has to be created. If left
+                                    empty cert-manager will automatically choose a
                                     zone.
                                   type: string
                                 project:
