Create implementation of PrefixWriter interface in describe package of kubectl
Signed-off-by: Haoxiang Zhou <haoxiang.zhou@jetstack.io>

--- a/cmd/ctl/pkg/status/BUILD.bazel
+++ b/cmd/ctl/pkg/status/BUILD.bazel
@@ -25,6 +25,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//cmd/ctl/pkg/status/certificate:all-srcs",
+        "//cmd/ctl/pkg/status/util:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
