Add serviceAccountName to issuers CRDs for http01 solvers
Signed-off-by: Paul Jones <paul.jones@jetstack.io>

--- a/deploy/crds/crd-challenges.yaml
+++ b/deploy/crds/crd-challenges.yaml
@@ -569,9 +569,9 @@ spec:
                               spec:
                                 description: PodSpec defines overrides for the HTTP01
                                   challenge solver pod. Only the 'priorityClassName',
-                                  'nodeSelector', 'affinity' and 'tolerations' fields
-                                  are supported currently. All other fields will be
-                                  ignored.
+                                  'nodeSelector', 'affinity', 'serviceAccountName'
+                                  and 'tolerations' fields are supported currently.
+                                  All other fields will be ignored.
                                 type: object
                                 properties:
                                   affinity:
@@ -1378,6 +1378,9 @@ spec:
                                   priorityClassName:
                                     description: If specified, the pod's priorityClassName.
                                     type: string
+                                  serviceAccountName:
+                                    description: If specified, the pod's service account
+                                    type: string
                                   tolerations:
                                     description: If specified, the pod's tolerations.
                                     type: array
@@ -2043,9 +2046,9 @@ spec:
                               spec:
                                 description: PodSpec defines overrides for the HTTP01
                                   challenge solver pod. Only the 'priorityClassName',
-                                  'nodeSelector', 'affinity' and 'tolerations' fields
-                                  are supported currently. All other fields will be
-                                  ignored.
+                                  'nodeSelector', 'affinity', 'serviceAccountName'
+                                  and 'tolerations' fields are supported currently.
+                                  All other fields will be ignored.
                                 type: object
                                 properties:
                                   affinity:
@@ -2851,6 +2854,9 @@ spec:
                                       type: string
                                   priorityClassName:
                                     description: If specified, the pod's priorityClassName.
+                                    type: string
+                                  serviceAccountName:
+                                    description: If specified, the pod's service account
                                     type: string
                                   tolerations:
                                     description: If specified, the pod's tolerations.
@@ -3518,9 +3524,9 @@ spec:
                               spec:
                                 description: PodSpec defines overrides for the HTTP01
                                   challenge solver pod. Only the 'priorityClassName',
-                                  'nodeSelector', 'affinity' and 'tolerations' fields
-                                  are supported currently. All other fields will be
-                                  ignored.
+                                  'nodeSelector', 'affinity', 'serviceAccountName'
+                                  and 'tolerations' fields are supported currently.
+                                  All other fields will be ignored.
                                 type: object
                                 properties:
                                   affinity:
@@ -4326,6 +4332,9 @@ spec:
                                       type: string
                                   priorityClassName:
                                     description: If specified, the pod's priorityClassName.
+                                    type: string
+                                  serviceAccountName:
+                                    description: If specified, the pod's service account
                                     type: string
                                   tolerations:
                                     description: If specified, the pod's tolerations.
