--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -650,9 +650,9 @@ spec:
                                     spec:
                                       description: PodSpec defines overrides for the
                                         HTTP01 challenge solver pod. Only the 'priorityClassName',
-                                        'nodeSelector', 'affinity' and 'tolerations'
-                                        fields are supported currently. All other
-                                        fields will be ignored.
+                                        'nodeSelector', 'affinity', 'serviceAccountName'
+                                        and 'tolerations' fields are supported currently.
+                                        All other fields will be ignored.
                                       type: object
                                       properties:
                                         affinity:
@@ -1591,6 +1591,10 @@ spec:
                                             type: string
                                         priorityClassName:
                                           description: If specified, the pod's priorityClassName.
+                                          type: string
+                                        serviceAccountName:
+                                          description: If specified, the pod's service
+                                            account
                                           type: string
                                         tolerations:
                                           description: If specified, the pod's tolerations.
@@ -2584,9 +2588,9 @@ spec:
                                     spec:
                                       description: PodSpec defines overrides for the
                                         HTTP01 challenge solver pod. Only the 'priorityClassName',
-                                        'nodeSelector', 'affinity' and 'tolerations'
-                                        fields are supported currently. All other
-                                        fields will be ignored.
+                                        'nodeSelector', 'affinity', 'serviceAccountName'
+                                        and 'tolerations' fields are supported currently.
+                                        All other fields will be ignored.
                                       type: object
                                       properties:
                                         affinity:
@@ -3525,6 +3529,10 @@ spec:
                                             type: string
                                         priorityClassName:
                                           description: If specified, the pod's priorityClassName.
+                                          type: string
+                                        serviceAccountName:
+                                          description: If specified, the pod's service
+                                            account
                                           type: string
                                         tolerations:
                                           description: If specified, the pod's tolerations.
@@ -4520,9 +4528,9 @@ spec:
                                     spec:
                                       description: PodSpec defines overrides for the
                                         HTTP01 challenge solver pod. Only the 'priorityClassName',
-                                        'nodeSelector', 'affinity' and 'tolerations'
-                                        fields are supported currently. All other
-                                        fields will be ignored.
+                                        'nodeSelector', 'affinity', 'serviceAccountName'
+                                        and 'tolerations' fields are supported currently.
+                                        All other fields will be ignored.
                                       type: object
                                       properties:
                                         affinity:
@@ -5461,6 +5469,10 @@ spec:
                                             type: string
                                         priorityClassName:
                                           description: If specified, the pod's priorityClassName.
+                                          type: string
+                                        serviceAccountName:
+                                          description: If specified, the pod's service
+                                            account
                                           type: string
                                         tolerations:
                                           description: If specified, the pod's tolerations.
