--- a/cmd/ctl/pkg/status/util/BUILD.bazel
+++ b/cmd/ctl/pkg/status/util/BUILD.bazel
@@ -5,7 +5,13 @@ go_library(
     srcs = ["prefixWriter.go"],
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/status/util",
     visibility = ["//visibility:public"],
-    deps = ["@io_k8s_kubectl//pkg/describe:go_default_library"],
+    deps = [
+        "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/util/duration:go_default_library",
+        "@io_k8s_kubectl//pkg/describe:go_default_library",
+        "@io_k8s_kubectl//pkg/util/event:go_default_library",
+    ],
 )
 
 filegroup(
