--- a/pkg/acme/webhook/cmd/BUILD.bazel
+++ b/pkg/acme/webhook/cmd/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
         "//pkg/acme/webhook/cmd/server:go_default_library",
         "@io_k8s_apiserver//pkg/server:go_default_library",
         "@io_k8s_component_base//logs:go_default_library",
-        "@io_k8s_klog//:go_default_library",
+        "@io_k8s_klog_v2//:go_default_library",
     ],
 )
 
