--- a/pkg/issuer/acme/dns/akamai/BUILD.bazel
+++ b/pkg/issuer/acme/dns/akamai/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
         "//pkg/issuer/acme/dns/util:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_pkg_errors//:go_default_library",
-        "@io_k8s_klog//:go_default_library",
+        "@io_k8s_klog_v2//:go_default_library",
     ],
 )
 
