--- a/cmd/cainjector/app/BUILD.bazel
+++ b/cmd/cainjector/app/BUILD.bazel
@@ -8,11 +8,12 @@ go_library(
     deps = [
         "//pkg/api:go_default_library",
         "//pkg/controller/cainjector:go_default_library",
+        "//pkg/logs:go_default_library",
         "//pkg/util:go_default_library",
+        "@com_github_go_logr_logr//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
         "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
-        "@io_k8s_klog//:go_default_library",
         "@io_k8s_sigs_controller_runtime//:go_default_library",
     ],
 )
