--- a/cmd/ctl/pkg/convert/BUILD.bazel
+++ b/cmd/ctl/pkg/convert/BUILD.bazel
@@ -17,7 +17,7 @@ go_library(
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_cli_runtime//pkg/printers:go_default_library",
         "@io_k8s_cli_runtime//pkg/resource:go_default_library",
-        "@io_k8s_klog//:go_default_library",
+        "@io_k8s_klog_v2//:go_default_library",
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
         "@io_k8s_kubectl//pkg/util/i18n:go_default_library",
         "@io_k8s_kubectl//pkg/util/templates:go_default_library",
