--- a/pkg/acme/client/middleware/BUILD.bazel
+++ b/pkg/acme/client/middleware/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/acme/client:go_default_library",
-        "@io_k8s_klog//:go_default_library",
+        "@io_k8s_klog_v2//:go_default_library",
         "@org_golang_x_crypto//acme:go_default_library",
     ],
 )
