--- a/pkg/issuer/acme/dns/route53/BUILD.bazel
+++ b/pkg/issuer/acme/dns/route53/BUILD.bazel
@@ -16,7 +16,7 @@ go_library(
         "@com_github_aws_aws_sdk_go//service/route53:go_default_library",
         "@com_github_aws_aws_sdk_go//service/sts:go_default_library",
         "@com_github_aws_aws_sdk_go//service/sts/stsiface:go_default_library",
-        "@io_k8s_klog//:go_default_library",
+        "@io_k8s_klog_v2//:go_default_library",
     ],
 )
 
