--- a/pkg/issuer/acme/dns/webhook/BUILD.bazel
+++ b/pkg/issuer/acme/dns/webhook/BUILD.bazel
@@ -14,7 +14,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
-        "@io_k8s_klog//:go_default_library",
+        "@io_k8s_klog_v2//:go_default_library",
     ],
 )
 
