Use go-diff to report error
Signed-off-by: Haoxiang Zhou <haoxiang.zhou@jetstack.io>

--- a/test/integration/ctl/BUILD.bazel
+++ b/test/integration/ctl/BUILD.bazel
@@ -21,6 +21,7 @@ go_test(
         "//pkg/util/pki:go_default_library",
         "//test/integration/framework:go_default_library",
         "//test/unit/gen:go_default_library",
+        "@com_github_sergi_go_diff//diffmatchpatch:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
